# Bottle-Cap-Project

./: Model_Ada_Mata.ipynb  Notebook_Ada_Mata.ipynb  README.md  Wandb.ipynb  bottle.yaml  dockerfile  model_ada_mata.py  pyproject.toml  requirements.txt  wandb.py
.github/workflows/: ci.yml
Dataset YOLO Format/labels/train/: raw-250110_dc_s001_b2_1.txt  raw-250110_dc_s001_b2_3.txt  raw-250110_dc_s001_b3_2.txt  raw-250110_dc_s001_b3_3.txt  raw-250110_dc_s001_b4_3.txt  raw-250110_dc_s001_b5_2.txt
Dataset YOLO Format/labels/val/: raw-250110_dc_s001_b5_3.txt
Dataset/new_labels/: raw-250110_dc_s001_b2_15.txt  raw-250110_dc_s001_b3_4.txt  raw-250110_dc_s001_b4_1.txt  raw-250110_dc_s001_b4_2.txt  raw-250110_dc_s001_b5_5.txt
Model YoloV11n/caps_nano_run/: args.yaml  results.csv
Model YoloV5n/caps_nano_run/: args.yaml  results.csv
Model YoloV8n/caps_nano_run/: args.yaml  results.csv
bsort/: model_ada_mata.py  wandb.py
