[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsort-cli"
version = "0.1.0"
description = "YOLO model for bottle cap color sorting (bsort)."
authors = [
    {name = "Kevyn Alifian Hernanda Wibowo", email = "kevin.j1159@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "opencv-python",
    "ultralytics",
    "PyYAML",
    "wandb",      
    "tqdm",
    "scikit-learn"
]

[project.scripts]
# Mendefinisikan program CLI Anda
bsort = "bsort.cli:main" 


[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["cv2", "ultralytics", "wandb"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["Tests"]

# [tool.pylint] (Pylint biasanya dikonfigurasi melalui .pylintrc atau CI)
